tests/baselines/reference/computedPropertyNames23_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames23_ES5.ts(6,12): error TS2465: 'this' cannot be referenced in a computed property name.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames23_ES5.ts (1 errors) ====
    class C {
        bar() {
            return 0;
        }
        [
            { [this.bar()]: 1 }[0]
               ~~~~
!!! error TS2465: 'this' cannot be referenced in a computed property name.
        ]() { }
    }